Dice data collection; dice recognition

--- a/harmony/templates/ChangeTable.html
+++ b/harmony/templates/ChangeTable.html
@@ -8,6 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="/bootstrap.min.css">
     <script src="/bootstrap.min.js"></script>
+    <script src="/htmx.min.js"></script>
     
     <style>
         table, th, td {
