--- a/harmony/templates/Controller.html
+++ b/harmony/templates/Controller.html
@@ -8,6 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="/bootstrap.min.css">
     <script src="/bootstrap.min.js"></script>
+    <script src="/htmx.min.js"></script>
     
     <style>
         table, th, td {
@@ -69,13 +70,11 @@
         </div>
         <div class="col" align="center">
             <div class="container">
-                <script>
-                </script>
                 <div class="row justify-content-center">
                     <h2 class="mt-5">Object Tracker</h2>
                 </div>
                 <div class="row justify-content-center">
-                    <div id="changeTable"></div>
+                    <div id="changeTable" hx-get="/objects" hx-trigger="every 1s"></div>
                 </div>
             </div>
         </div>
@@ -83,39 +82,6 @@
 </div>
 </body>
 <script>
-    var cycleChangeTable = true;
-    function captureModalEnable(modalId) {
-        const modal = document.getElementById(modalId)
-        modal.style.display = "block";
-        cycleChangeTable = false;
-        modal.addEventListener('hidden.bs.modal', function (e) {
-            cycleChangeTable = true;
-        })
-    }
-    async function refreshChangeTable(){
-        const request = new Request("/objects");
-        if (cycleChangeTable) {
-            await fetch(request)
-              .then((response) => {
-                if (response.status === 200) {
-                    const element = document.getElementById("changeTable");
-                    return response.text()
-                } else {
-                  throw new Error("Failed to retreive change table");
-                }
-              })
-              .then((response) => {
-                const element = document.getElementById("changeTable");
-                element.innerHTML = response
-              })
-              .catch((error) => {
-                console.error(error);
-              });
-        }
-    }
-    
-    setInterval(refreshChangeTable, 1500);
-    
     async function setPassive(){
         const request = new Request("/control/set_passive");
         fetch(request)
