--- a/observer/templates/Calibrator.html
+++ b/observer/templates/Calibrator.html
@@ -17,6 +17,8 @@
 <div class="container">
     <h1 align="center">Observer Calibrator</h1>
     <h3><a href="/config">Configuration</a></h3>
+   
+    </div>
     <div class="row" align="center">
         <div class="container">
             <div class="row">
@@ -28,10 +30,10 @@
         </div>
     </div>
     <div class="row" align="center">
-        {calibratorResult}
+        {calibrationMonitor}
     </div>
     <div class="row" align="center">
-        {calibrationMonitor}
+        {calibratorResult}
     </div>
 </div>
 </body>
