--- a/observer/templates/Configuration.html
+++ b/observer/templates/Configuration.html
@@ -7,41 +7,68 @@
 
     <link rel="stylesheet" href="/bootstrap.min.css">
     <script src="/bootstrap.min.js"></script>
+    <script src="/htmx.min.js"></script>
 
-    
     <title>Observer Configuration</title>
 </head>
 <body>
 
 <div class="container">
     <h1 align="center">Observer Configuration</h1>
-    <h3><a href="/control">Control</a></h3>
-    <h3><a href="/calibrator">Calibrate</a></h3>
-    <div class="row">
-        <iframe src="/console"></iframe>
+    <div class="container" align="right">
+        <input class="btn-info" type="button" value="Control" onclick="window.location.href='/control'">
     </div>
     <div class="row" align="center">
         <div class="col">
-            <form method="post">
-                <input type="hidden" name="config_type" value="save_state">
-                <input type="submit" value="Save State">
-            </form>
+            <input type="button" class="btn-primary" value="Save State" hx-post="/config" hx-swap="none">
         </div>
         <div class="col">
-            <form method="post">
-                <input type="hidden" name="config_type" value="calibrate_cameras">
-                <input type="submit" value="Calibrate Cameras">
-            </form>
+            <input class="btn-secondary" type="button" value="Calibrate Cameras" onclick="window.location.href='/calibrator'">
         </div>
     </div>
     {cameraConfigRows}
-    <div class "row" align="center">
-        <h3>Unwarped Overlaid Cameras</h3>
-        {unwarpedImage}
+    <div class="container" align="right" style="margin-top: 1rem">
+        <input type="button" class="btn-primary" value="Add Camera" onclick="window.location.href='/config/new_camera'">
     </div>
 </div>
 </body>
 <script>
-    {clickSubscriptions}
+    function clearCamAZ(camName, event) {
+        const formField = document.getElementById(`cam${camName}_ActiveZone`)
+        formField.value = '[]'
+    }
+    
+    function camClickListener(camName, event) {
+        const imgElem = document.getElementById(`cam${camName}`)
+        bounds=imgElem.getBoundingClientRect();
+        const left=bounds.left;
+        const top=bounds.top;
+        const x = event.x - left;
+        const y = event.y - top;
+        const cw=imgElem.clientWidth
+        const ch=imgElem.clientHeight
+        const iw=imgElem.naturalWidth
+        const ih=imgElem.naturalHeight
+        const px=x/cw*iw
+        const py=y/ch*ih
+        //console.log("img element points: ", px, py)
+        const x_offset = 0
+        const x_scale = 1
+        const image_x = (px - x_offset) * x_scale
+        const y_offset = 0
+        const y_scale = 1
+        const image_y = (py - y_offset) * y_scale
+        const formField = document.getElementById(`cam${camName}_ActiveZone`)
+        var formValue
+        try {
+          formValue = JSON.parse(formField.value)
+        }
+        catch(err) {
+          formValue = []
+        }
+        formValue.push([~~image_x, ~~image_y])
+        formField.value = JSON.stringify(formValue)
+        formField.dispatchEvent(new Event('change'));
+    }
 </script>
 </html>
