--- a/observer/templates/Configurator.html
+++ b/observer/templates/Configurator.html
@@ -9,26 +9,25 @@
     <script src="/bootstrap.min.js"></script>
     <script src="/htmx.min.js"></script>
 
-    <title>Observer Configuration</title>
+    <title>Observer Configurator</title>
 </head>
 <body>
-
 <div class="container">
-    <h1 align="center">Observer Configuration</h1>
+    <h1 align="center">Configurator</h1>
     <div class="container" align="right">
-        <input class="btn-info" type="button" value="Control" onclick="window.location.href='/control'">
+        <input class="btn-info" type="button" value="Observer" onclick="window.location.href='/'">
     </div>
     <div class="row" align="center">
         <div class="col">
-            <input type="button" class="btn-primary" value="Save State" hx-post="/config" hx-swap="none">
+            <input type="button" class="btn-primary" value="Save State" hx-post="{configuratorURL}" hx-swap="none">
         </div>
         <div class="col">
-            <input class="btn-secondary" type="button" value="Calibrate Cameras" onclick="window.location.href='/calibrator'">
+            <input class="btn-secondary" type="button" value="Calibrate Cameras" onclick="window.location.href='{configuratorURL}calibrator'">
         </div>
     </div>
     {cameraConfigRows}
     <div class="container" align="right" style="margin-top: 1rem">
-        <input type="button" class="btn-primary" value="Add Camera" onclick="window.location.href='/config/new_camera'">
+        <input type="button" class="btn-primary" value="Add Camera" onclick="window.location.href='{configuratorURL}new_camera'">
     </div>
 </div>
 </body>
