--- a/observer/templates/Observer.html
+++ b/observer/templates/Observer.html
@@ -20,11 +20,18 @@
 </head>
 <body><div class="container">
     <h1 align="center">Observer</h1>
-    <div class="container" align="right">
-        <input class="btn-info" type="button" value="Configurator" onclick="window.location.href='/configurator'">
+    <div class="container">
+        <div class="row">
+            <div class="col" align="left">
+                <input class="btn btn-danger" type="button" value="Reset Observer" hx-get="{observerURL}reset">
+            </div>
+            <div class="col" align="right">
+                <input class="btn btn-info" type="button" value="Configurator" onclick="window.location.href='{configuratorURL}'">
+            </div>
+        </div>
     </div>
     <div class="row">
-        <div class="col">
+        <div class="col" style="min-width: 500px">
             <h2 class="mt-5">Capture Control</h2>
             <div class="btn-group" role="group" aria-label="Observer Capture Mode Control Buttons">
               <input type="radio" class="btn-check" name="btnradio" id="passive" autocomplete="off" checked="" hx-get="{observerURL}set_passive">
@@ -32,15 +39,23 @@
               <input type="radio" class="btn-check" name="btnradio" id="track" autocomplete="off" hx-get="{observerURL}set_track">
               <label class="btn btn-outline-primary" for="track">Track</label>
             </div>
-            <img class="img-fluid border border-primary" src="{observerURL}observer_console" style="border-radius: 50px;">
-        </div>
-        <div class="col">
+            <div class="container">
+                <img class="img-fluid border border-primary" src="{observerURL}observer_console" style="border-radius: 50px;">
+            </div>
             <h3 class="mt-5">Virtual Map</h3>
-            <img class="img-fluid border border-primary" src="{observerURL}minimap" style="border-radius: 5px;">
+            <div class="container">
+                <img class="img-fluid border border-primary" src="{observerURL}minimap" style="border-radius: 5px;">
+            </div>
         </div>
-    </div>
-    <div class="row">
-        <div class="col">
+        <div class="col" align="center" style="min-width: 500px">
+            <div class="row justify-content-center">
+                <h2 class="mt-5">Object Tracker</h2>
+            </div>
+            <div class="row justify-content-center">
+                <div id="objectInteractor" class="container">
+                    <div id="objectTable" hx-get="{observerURL}/objects" hx-trigger="every 1s"></div>
+                </div>
+            </div>
             <div class="row justify-content-center">
                 <h3 id="liveCamHeader" class="mt-5">Live Cameras (Selected {defaultCamera})</h3>
                 <img id="liveCam" class="img-responsive border border-primary bg-primary" src="{observerURL}camWithChanges/{defaultCamera}" style="transform: rotate(-90deg); border-radius: 40px; max-width: 80%">
@@ -55,14 +70,6 @@
                     }}
                 </script>
                 {cameraButtons}
-            </div>
-        </div>
-        <div class="col" align="center">
-            <div class="row justify-content-center">
-                <h2 class="mt-5">Object Tracker</h2>
-            </div>
-            <div class="row justify-content-center">
-                <div id="changeTable" hx-get="{observerURL}/objects" hx-trigger="every 1s"></div>
             </div>
         </div>
     </div>
