--- a/observer/templates/NewCamera.html
+++ b/observer/templates/NewCamera.html
@@ -13,11 +13,11 @@
 </head>
 <body>
     <div class="container" align="right">
-        <input class="btn-info" type="button" value="Configuration" onclick="window.location.href='/config'">
+        <input class="btn-info" type="button" value="Configuration" onclick="window.location.href='{configuratorURL}'">
     </div>
     <div class="container">
         <h1>New Camera</h1>
-        <form hx-post="/config/new_camera" hx-swap="outerHTML">
+        <form hx-post="{configuratorURL}/new_camera" hx-swap="outerHTML">
             <label for="camName">Name</label>
             <input type="text" class="form-control" name="camName" placeholder="0"><br>
             <input type="number" class="form-check-input" name="camRot" min="0" max="360">
