fix name tracking bug; add divider lines to object table

--- a/observer/templates/ObjectDistanceCard.html
+++ b/observer/templates/ObjectDistanceCard.html
@@ -1,17 +1,14 @@
 <div class="row mb-1">
     <div class="col">
         <div class="row">
-            <div class="row">
-                <p>{targetName}</p>
-            </div>
+            <h5>{targetName}</h5>
         </div>
         <div class="row">
-            <div class="col">
-                <p>Target Distance: {objectDistance}</p>
-            </div>
+            <p>Target Distance: {objectDistance}</p>
         </div>
     </div>
     <div class="col">
-        <img class="img-fluid border border-secondary" alt="Capture Image" src="data:image/jpg;base64,{encodedBA}" style="border-radius: 10px;">
+        <img class="img-fluid" alt="Capture Image" src="data:image/jpg;base64,{encodedBA}" style="border-radius: 10px;">
     </div>
 </div>
+<hr class="mt-2 mb-3">
