--- a/observer/templates/Observer.html
+++ b/observer/templates/Observer.html
@@ -58,7 +58,7 @@
             </div>
             <div class="row justify-content-center">
                 <h3 id="liveCamHeader" class="mt-5">Live Cameras (Selected {defaultCamera})</h3>
-                <img id="liveCam" class="img-responsive border border-primary bg-primary" src="{observerURL}camWithChanges/{defaultCamera}" style="transform: rotate(-90deg); border-radius: 40px; max-width: 80%">
+                <img id="liveCam" class="img-responsive bg-primary" src="{observerURL}camWithChanges/{defaultCamera}" style="transform: rotate(-90deg); border-radius: 40px; max-width: 80%">
             </div>
             <div class="row justify-content-center">
                 <script>
