--- a/observer/templates/TrackedObjectRow.html
+++ b/observer/templates/TrackedObjectRow.html
@@ -2,7 +2,7 @@
     <div class="col">
         <div class="row">
             <div class="col">
-                <p>{objectName}</p>
+                <h5>{objectName}</h5>
             </div>
         </div>
         <div class="row">
@@ -21,7 +21,7 @@
         </div>
     </div>
     <div class="col">
-        <img class="img-fluid border border-secondary" alt="Capture Image" src="data:image/jpg;base64,{encodedBA}" style="border-radius: 10px;">
+        <img class="img-fluid" alt="Capture Image" src="data:image/jpg;base64,{encodedBA}" style="border-radius: 10px;">
     </div>
 </div>
 <hr class="mt-2 mb-3"/>
