--- a/observer/templates/TrackedObjectUpdater.html
+++ b/observer/templates/TrackedObjectUpdater.html
@@ -1,5 +1,5 @@
 <h1>Updating {objectName}</h1>
-<div class="container">
+<div class="container border border-primary">
     <div class="row" align="right">
         <input class="btn btn-info" type="button" value="Return to table" hx-target="#objectInteractor" hx-get='{observerURL}objects'">
     </div>
