--- a/observer/templates/ObjectDistanceTable.html
+++ b/observer/templates/ObjectDistanceTable.html
@@ -3,5 +3,6 @@
     <div class="row" align="right">
         <input class="btn btn-info" type="button" value="Return to table" hx-target="#objectInteractor" hx-get='{observerURL}objects'">
     </div>
+    <hr class="mt-2 mb-3">
     {objectDistanceCards}
 </div>
