--- a/observer/templates/Observer.html
+++ b/observer/templates/Observer.html
@@ -51,6 +51,7 @@
             <div class="row justify-content-center">
                 <h2 class="mt-5">Object Tracker</h2>
             </div>
+            <hr class="mt-2 mb-3">
             <div class="row justify-content-center">
                 <div id="objectInteractor" class="container">
                     <div id="objectTable" hx-get="{observerURL}/objects" hx-trigger="every 1s"></div>
